[project]
name = "alicebot"
version = "0.8.0"
description = "A simply asynchronous python chatbot framework."
authors = [{ name = "st1020", email = "stone_1020@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["bot", "chatbot", "qq", "qqbot", "cqhttp", "coolq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.0,<3.0.0;python_version<'3.11'",
    "pydantic>=2.0.3,<3.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "loguru>=0.7.0,<0.8.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
cqhttp = ["alicebot-adapter-cqhttp"]
onebot = ["alicebot-adapter-onebot"]
mirai = ["alicebot-adapter-mirai"]
dingtalk = ["alicebot-adapter-dingtalk"]
apscheduler = ["alicebot-adapter-apscheduler"]
hot_reload = ["watchfiles"]
all = [
    "alicebot-adapter-cqhttp",
    "alicebot-adapter-onebot",
    "alicebot-adapter-mirai",
    "alicebot-adapter-dingtalk",
    "alicebot-adapter-apscheduler",
    "watchfiles",
]

[tool.pdm.dev-dependencies]
dev = [
    "-e alicebot-adapter-cqhttp @ {root:uri}/packages/alicebot-adapter-cqhttp",
    "-e alicebot-adapter-onebot @ {root:uri}/packages/alicebot-adapter-onebot",
    "-e alicebot-adapter-mirai @ {root:uri}/packages/alicebot-adapter-mirai",
    "-e alicebot-adapter-dingtalk @ {root:uri}/packages/alicebot-adapter-dingtalk",
    "-e alicebot-adapter-apscheduler @ {root:uri}/packages/alicebot-adapter-apscheduler",
]
typing = [ # used only in type check
    "watchfiles",
    "trio>=0.22.2", # watchfiles used this lib
]
lint = ["black", "ruff", "mypy", "pylint", "pylint-pydantic"]
docs = ["sophia-doc~=0.1.4", "tomlkit"]

[project.urls]
Homepage = "https://docs.alicebot.dev/"
Documentation = "https://docs.alicebot.dev/"
Repository = "https://github.com/AliceBotProject/alicebot"
Changelog = "https://docs.alicebot.dev/changelog.html"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
    "C90",     # mccabe
    "BLE",     # flake8-blind-except
    "FBT",     # flake8-boolean-trap
    "COM",     # flake8-commas
    "EM",      # flake8-errmsg
    "INP",     # flake8-no-pep420
    "TID",     # flake8-tidy-imports
    "E501",    # Line too long, handled by black
    "D415",    # First line should end with a period, question mark, or exclamation point
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "S101",    # Use of assert detected
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PERF203", # try-except within a loop incurs performance overhead
    "RUF001",  # String contains ambiguous unicode character string
    "RUF002",  # Docstring contains ambiguous unicode character string
    "RUF003",  # Comment contains ambiguous unicode character string
]
target-version = "py38"

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.isort]
known-third-party = ["pydantic", "aiohttp", "loguru"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.ruff.per-file-ignores]
"packages/*/alicebot/__init__.py" = ["D104"]
"packages/*/alicebot/adapter/__init__.py" = ["D104"]
"examples/plugins/*.py" = ["D", "T", "ANN"]

[tool.pyright]
ignore = ["examples/plugins"]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnnecessaryIsInstance = false
reportCallInDefaultInitializer = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true

[tool.mypy]
python_version = "3.8"
strict = true
exclude = [
    '^packages/.*/alicebot/__init__\.py$',
    '^packages/.*/alicebot/adapter/__init__\.py$',
    '^examples/.*\.py$',
]
warn_unused_ignores = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pylint.main]
disable = [
    "arguments-differ",
    "broad-exception-caught",
    "import-outside-toplevel",
    "line-too-long",
    "too-many-lines",
    "duplicate-code",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-nested-blocks",
    "too-many-public-methods",
]
load-plugins = ["pylint_pydantic"]
source-roots = ["."]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "e", "f", "ws", "cm", "at"]

[tool.pylint.variables]
allowed-redefined-builtins = ["id", "type"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/alicebot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
