[project]
name = "alicebot"
version = "0.10.0"
description = "A simply asynchronous python chatbot framework."
authors = [{ name = "st1020", email = "stone_1020@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["bot", "chatbot", "qq", "qqbot", "cqhttp", "coolq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0.0,<3.0.0;python_version<'3.11'",
    "pydantic>=2.0.3,<3.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "structlog>=24.1.0,<25.0.0",
    "rich>=13.7.0,<14.0.0",
    "typing-extensions>=4.5.0",
    "anyio>=4.4.0,<5.0.0",
]

[project.optional-dependencies]
cqhttp = ["alicebot-adapter-cqhttp"]
onebot = ["alicebot-adapter-onebot"]
mirai = ["alicebot-adapter-mirai"]
dingtalk = ["alicebot-adapter-dingtalk"]
telegram = ["alicebot-adapter-telegram"]
apscheduler = ["alicebot-adapter-apscheduler"]
hot_reload = ["watchfiles>=0.24"]
all = [
    "alicebot-adapter-cqhttp",
    "alicebot-adapter-onebot",
    "alicebot-adapter-mirai",
    "alicebot-adapter-dingtalk",
    "alicebot-adapter-telegram",
    "alicebot-adapter-apscheduler",
    "watchfiles>=0.24",
]

[project.urls]
Homepage = "https://docs.alicebot.dev/"
Documentation = "https://docs.alicebot.dev/"
Repository = "https://github.com/AliceBotProject/alicebot"
Changelog = "https://docs.alicebot.dev/changelog.html"

[tool.uv]
dev-dependencies = [
    # dev
    "setuptools>=74",
    "trio>=0.26",
    "exceptiongroup>=1",
    "tomli>=2",
    # lint
    "ruff>=0.6",
    "mypy>=1",
    "pylint>=3",
    "pylint-pydantic>=0.3",
    # docs
    "sophia-doc>=0.1",
    "tomlkit>=0.13",
    # test
    "pytest>=8",
    "pytest-xdist>=3",
    "pytest-cov>=5",
]

[tool.uv.sources]
alicebot-adapter-cqhttp = { workspace = true }
alicebot-adapter-onebot = { workspace = true }
alicebot-adapter-mirai = { workspace = true }
alicebot-adapter-dingtalk = { workspace = true }
alicebot-adapter-telegram = { workspace = true }
alicebot-adapter-apscheduler = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C90",      # mccabe
    "FBT",      # flake8-boolean-trap
    "EM",       # flake8-errmsg
    "INP",      # flake8-no-pep420
    "E501",     # Line too long, handled by formatter
    "D415",     # First line should end with a period, question mark, or exclamation point
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ASYNC109", # Async function definition with a timeout parameter
    "S101",     # Use of assert detected
    "COM812",   # Trailing comma missing
    "TD003",    # Missing issue link on the line following this TODO
    "FIX002",   # Line contains TODO
    "PGH003",   # Use specific rule codes when ignoring type issues
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "TRY003",   # Avoid specifying long messages outside the exception class
    "PERF203",  # try-except within a loop incurs performance overhead
]
allowed-confusables = ["，", "：", "！"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.isort]
known-third-party = ["pydantic", "aiohttp", "structlog"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyflakes]
extend-generics = [
    "alicebot.plugin.Plugin",
    "alicebot.adapter.Adapter",
    "alicebot.event.Event",
    "alicebot.event.MessageEvent",
    "alicebot.message.Message",
    "alicebot.message.MessageSegment",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"packages/*/alicebot/__init__.py" = ["D104"]
"packages/*/alicebot/adapter/__init__.py" = ["D104"]
"examples/plugins/*.py" = ["D", "T", "ANN"]
"tests/*.py" = ["D", "PLR2004"]

[tool.pyright]
ignore = ["examples/plugins"]
extraPaths = ["tests", "tests/test_utils"]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnnecessaryIsInstance = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true

[tool.mypy]
python_version = "3.9"
strict = true
exclude = [
    '^packages/.*/alicebot/__init__\.py$',
    '^packages/.*/alicebot/adapter/__init__\.py$',
    '^examples/.*\.py$',
]
warn_return_any = false

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pylint.main]
disable = [
    # Warning
    "broad-exception-caught",
    # Convention
    "import-outside-toplevel",
    "line-too-long",
    "missing-function-docstring",
    "too-many-lines",
    # Refactor
    "duplicate-code",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
]
load-plugins = ["pylint_pydantic"]
source-roots = ["."]
ignore = ["packages/alicebot-adapter-telegram/examples"]

[tool.pylint.variables]
allowed-redefined-builtins = ["id", "type"]

[tool.pytest.ini_options]
log_cli = true
testpaths = "tests"
addopts = "--cov=alicebot --cov-report=term-missing"

[tool.coverage.run]
omit = ["alicebot/adapter/utils.py"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
    "@(abc\\.)?abstractmethod",
]
omit = ["alicebot/log.py"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/alicebot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
